# project-graph

./: .gitignore  README.md  output.csv  project-graph.cabal  stack.yaml
lib/ProjectGraph/: App.hs  AppResources.hs  DataFiles.hs  DateUtil.hs  GTK3Test.hs  GUI.hs  Options.hs  Planning.hs  Scheduling.hs  Schema.hs  TopSort.hs  Workday.hs
lib/ProjectGraph/GUI/: ProjectConfigChooser.hs  ProjectWindow.hs
samples/: availability.yaml  project.yaml
script/: init  loop  weeder
src/: GUI.hs  Main.hs
ui/: main.glade
