name:                     project-graph
version:                  0.1.0.0
synopsis:                 Simple graph-based project-scheduling tool
description:              Treats stories/tasks etc. as a directed graph and computes resulting schedule etc.
homepage:                 https://github.com/rcook/project-graph#readme
license:                  MIT
license-file:             LICENSE
author:                   Richard Cook
maintainer:               rcook@rcook.org
copyright:                2018 Richard Cook
category:                 Command Line
build-type:               Simple
cabal-version:            >= 1.10
extra-source-files:       README.md

executable project-graph
  default-language:       Haskell2010
  ghc-options:            -fwarn-unused-imports
  hs-source-dirs:         src
  main-is:                Main.hs
  build-depends:          base >= 4.7 && < 5
                        , bytestring
                        , cassava
                        , containers
                        , errors
                        , filepath
                        , graphviz
                        , gtk3
                        , project-graph
                        , text
                        , time
                        , yaml

library
  default-language:       Haskell2010
  ghc-options:            -fwarn-unused-imports
  hs-source-dirs:         lib
  exposed-modules:        ProjectGraph.App
                        , ProjectGraph.AppResources
                        , ProjectGraph.DateUtil
                        , ProjectGraph.GUI.ProjectConfigChooser
                        , ProjectGraph.GUI.ProjectWindow
                        , ProjectGraph.Options
                        , ProjectGraph.Planning
                        , ProjectGraph.Scheduling
                        , ProjectGraph.Schema
                        , ProjectGraph.TopSort
                        , ProjectGraph.Workday
  build-depends:          base >= 4.7 && < 5
                        , bytestring
                        , cairo
                        , containers
                        , file-embed
                        , gi-gtk
                        , glib
                        , graphviz
                        , gtk3
                        , optparse-applicative
                        , split
                        , template-haskell
                        , temporary
                        , text
                        , time
                        , transformers
                        , xdot
                        , yaml
  if os(osx)
    build-depends:        gtk3-mac-integration
